--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -352,6 +352,23 @@ publisher={{IEEE.}}
 	year = {1992}
 }
 
+
+% mittari
+
+@ARTICLE{chidamber_metricssuite_1994, 
+author={S. R. Chidamber and C. F. Kemerer}, 
+journal={IEEE Transactions on Software Engineering}, 
+title={A metrics suite for object oriented design}, 
+year={1994}, 
+volume={20}, 
+number={6}, 
+pages={476-493}, 
+keywords={object-oriented methods;object-oriented programming;software metrics;automated data collection tool;measurement principles;metrics suite;object oriented design;object oriented programming;organization;process improvement;software development;software measures;Application software;Engineering management;Information management;Information technology;Ontologies;Programming;Software development management;Software engineering;Software measurement;Technology management}, 
+doi={10.1109/32.295895}, 
+ISSN={0098-5589}, 
+month={Jun}
+}
+
 % design pattern testattavuus
 
 @inproceedings{baudry_measuring_2003,
